# SamplePlugin

./: CMakeLists.txt  README.md
archive/: sampleplugin.yaml
src/: CMakeLists.txt
src/SamplePlugin/: CMakeLists.txt  SamplePlugin.cpp  SamplePlugin.h
